styles.css
:root{
   --bg: #000302;
    --green: #106137;
    --gold: gold;
    --white: #fafafa;
}



*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    scroll-behavior: smooth;
     font-family: "Poppins", sans-serif;
}

body{
    background-color: var(--bg);
}

#hero{
    position: relative;
    width: 100%;
    height: 100vh;
    background-image:url(./assets/hero_image.png);
    background-size: cover;
    background-position: center 15%;
    background-repeat: no-repeat;
 
}

#hero::after{
    content: "";
    position: absolute;
    bottom: 0;
    left: 0;
    width: 100%;
    height: 45%;
    background: linear-gradient(to top, rgba(0,0,0,1), transparent);
    pointer-events: none;
}



nav{
    width: 100%;
    height: 3rem;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 0.5rem 3rem;
    position: fixed;
    background: rgba(255, 255, 255, 0.7);
    backdrop-filter: blur(20px);
    -webkit-backdrop-filter: blur(20px);
    border: none;
    border-bottom: 1px solid rgba(255, 255, 255, 0.7);
    box-shadow: 0 4px 0 rgba(255, 255, 255, 0.1); /* very subtle bottom-only shadow */
    background-image: none;
    transition: all 300ms cubic-bezier(0.4, 0.0, 0.2, 1);
    cursor: pointer;
    z-index: 10;

}


.nav-links{
    display: flex;
    gap: 32px;
    
}

.nav-links li{
    list-style: none;
   

}

.nav-links a{
    position: relative;
   text-decoration: none;
   color: #000;
   font-size: 1.1rem;
   transition: color 0.3s ease;
}

.nav-links a:after{
    content: "";
    position: absolute;
    background-color: #106137;
    height: 2px;
    width: 0;
    left: 0;
    bottom: -7px;
    transition: 0.3s ease;

}

.nav-links a:hover:after{
    color: var(--green);
    width: 100%;
}

.nav-links a.active::after {
    width: 100%;
}

.menu{
    display: none;
}


#logo img{
    padding-top: 0.4rem;
    height: 2.5rem;
    width: 3.7rem;
}

.hero-text{
   text-align: center;
   color: azure;
   font-size: 3rem;
   padding-top: 18rem;
   z-index: 10;
}

#about{
    width: 100%;
    min-height: 100vh;
    background-color: var(--bg);
    color: var(--white);
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 25px;
}

.about-image{
    flex: 0 1 18rem;
    height: 25rem;
    display: flex;
    justify-content: center;
}

.about-image img{
    height: 24rem;
    width: 16rem;
    max-width: 100%;
    object-fit: cover;
    border-radius: 10px;
    border: 1px solid var(--white);
}

.about-content{
    flex: 1 1 32rem;
    max-width: 36rem;
    padding: 1rem;
}


.title, .info {
  display: flex;
  justify-content: space-between;
  align-items: center;
  color: #fafafa;
}

.title span:first-child {
  font-weight: bold;
  padding-bottom: 5px;
}

.info span i{
    font-size: 1rem;
    color: var(--gold);
}

.right {
  color: var(--gold);
  font-size: 1.3rem;
  font-weight: 500;
}

.info-text{
    color: #d8d8d8;
    padding-top: 20px;
    letter-spacing: 1px;
    line-height: 1rem;
    font-weight: 100; 
    font-size: 0.8rem;
}

.genre{
    display: flex;
    gap: 20px;
    padding-top: 0.7rem;
}

.genre button{
    border: 1px solid var(--white);
    background: none;
    color: var(--white);
    padding: 0.3em 0.6em;
    border-radius: 5px;
}

#trailer{
    margin-top: 0.9rem;
    padding: 0.4rem 0.5rem;
    border-radius: 12px;
    width: 10rem;
    height: 2.5rem;
    font-size: 1rem;
    font-weight: 300;
    transition: width 0.3s ease, height 0.3s ease, background-color 0.3s ease;
    cursor: pointer;
    
}

#trailer:hover{
    background-color: var(--green);
    color: var(--white);
     width: 10.2rem;
    height: 2.6rem;
}

#about a{
    text-decoration: none;
    color: var(--green);
}


#characters{
    text-align: center;
    background-color: var(--bg);
    min-height: 100vh;
    width: 100%;

    display: flex;
    flex-direction: column;
    justify-content: center;

}


.character-grid{
    height: 80vh;
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: flex-start;
    flex-wrap: nowrap;
    overflow-x: auto;
    overflow-y: hidden;
    gap: 30px;
    padding: 0 3rem;

    /* Firefox */
    scrollbar-width: none;

    /* IE/Edge */
    -ms-overflow-style: none;
}

/* Chrome, Safari, Edge */
.character-grid::-webkit-scrollbar{
    display: none;
}

.character-card{
    flex-shrink: 0;
    padding: 15px;
}

.character-card img{
    height: 320px;
    width: 230px;
    object-fit: cover;
    border-radius: 10px;
    transition: transform 0.5s ease;
}

.character-card img:hover{
    transform: scale(1.1);
    border-color: #38BDF8;
    box-shadow:
        0 0 8px rgba(56, 189, 248, 0.6),
        0 0 18px rgba(56, 189, 248, 0.4);
}


.character-card h3{
    color: #fafafa;
    text-align: center;
    margin-top: 0.5rem;
}

.title-label{
  text-align: center;
  color: var(--green);
  font-size: 16px;
  letter-spacing: 3px;
  text-transform: uppercase;
  margin-bottom: 28px;
}

#quotes{
    background-color: var(--bg);
    max-height: 100vh;
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
    position: relative;
}

.quote-rotator {
  padding: 80px 20px;
  text-align: center;
}

.quote-text{
    color: var(--white);
    font-size: 30px;
    line-height: 1.4;
    max-width: 400px;
    margin: 0 auto 20px;
    transition: opacity 0.4s ease;
}

.quote-divider {
  width: 32px;
  height: 1px;
  background: var(--gold);
  margin: 0 auto 16px;
}

.quote-author{
   color: var(--gold);
   font-size: 18px;
}

.quote-dots {
  padding-top: 25px;
  display: flex;
  justify-content: center;
  gap: 8px;
}

.quote-dots span {
  width: 6px;
  height: 6px;
  border-radius: 50%;
  background: #2e3a24;
}

.quote-dots span.active {
  background: #4a7c2f;
}

.crystals{
    position: absolute;
    inset: 0;
    pointer-events: none;
}

.crystals span{
    position: absolute;
    width: 12px;
    height: 12px;
    background: linear-gradient(135deg, #9BE7FF, #38BDF8);
    transform: rotate(45deg);
    border-radius: 2px;

    box-shadow:
        0 0 8px #38BDF8,
        0 0 18px rgba(56,189,248,.8);

    animation: crystalFloat 8s ease-in-out infinite;
}

.crystals span:nth-child(1){
    top:10%;
    left:8%;
    animation-delay:0s;
}

.crystals span:nth-child(2){
    top:20%;
    right:12%;
    width:16px;
    height:16px;
    animation-delay:1.5s;
}

.crystals span:nth-child(3){
    top:60%;
    left:15%;
    animation-delay:3s;
}

.crystals span:nth-child(4){
    top:25%;
    left:45%;
    width:8px;
    height:8px;
}

.crystals span:nth-child(5){
    bottom:18%;
    right:20%;
    width:18px;
    height:18px;
}

.crystals span:nth-child(6){
    bottom:12%;
    left:70%;
    animation-delay:2s;
}

.crystals span:nth-child(7){
    top:70%;
    right:8%;
    width:10px;
    height:10px;
}

.crystals span:nth-child(8){
    top:8%;
    left:70%;
    width:14px;
    height:14px;
}

@keyframes crystalFloat{

    0%,100%{
        transform: translateY(0) rotate(45deg);
    }

    50%{
        transform: translateY(-15px) rotate(60deg);
    }

}

.crystals span{
    animation:
        crystalFloat 8s ease-in-out infinite,
        sparkle 2s ease-in-out infinite;
}

@keyframes sparkle{

    0%,100%{
        opacity:.4;
        filter:brightness(1);
    }

    50%{
        opacity:1;
        filter:brightness(1.8);
    }

}

#gallery{
    width: min(1200px, 90%);
    margin: 0 auto;
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
    gap: 20px;
}

#gallery img{
    width: 100%;
    aspect-ratio: 16 / 9;
    object-fit: cover;
    border-radius: 12px;
    cursor: pointer;
    transition: transform .3s ease;
}

#gallery img:hover{
    transform: scale(1.03);
}

.lightbox{
    position: fixed;
    inset: 0;
    background: rgba(0,0,0,.9);
    display: flex;
    justify-content: center;
    align-items: center;
    opacity: 0;
    visibility: hidden;
    transition: .3s;
    z-index: 1000;
}

.lightbox.active{
    opacity: 1;
    visibility: visible;
}


.lightbox img{
    max-width: 60%;
    max-height: 80%;
    border-radius: 12px;
}

.close{
    position: absolute;
    color: var(--white);
    top: 35px;
    right: 35px;
    font-size: 45px;
    cursor: pointer;
}

#footer{
    padding-top: 40px;
    width: 100%;
    color: var(--white);
}

.footer-brand h2{
    font-size: 14px;
    font-weight: 300;
    color: var(--green);
    margin-bottom: 5px;
}

.footer-brand p{
    font-size: 24px;
    max-width: 400px;
    width: 100%;
    margin-bottom: 15px;
}


.footer-social h3{
    font-size: 14px;
    color: var(--green);
    margin-bottom: 10px;
}

.footer-social a{
    color: var(--gold);
    text-decoration: none;
    padding: 5px 5px;
}

.footer-social a:hover{
    color: var(--white);
}

.footer-top{
    display: flex;
    align-items: center;
    justify-content: space-between;
    min-height: 65vh;
    margin: 10px 40px;
}

.footer-links h3{
     font-size: 12px;
     color: var(--green);
     margin-bottom: 3px;

}

.footer-links li{
    list-style: none;
    margin-bottom: 3px;
}

.footer-links li a{
    text-decoration: none;
    color: var(--white);
    font-size: 12px;
    font-weight: 500;
}

.footer-bottom{
    border-top: 1.5px solid var(--gold);
    padding: 15px 5px;
    margin-top: 40px;

    display: flex;
    justify-content: space-between;
    align-items: center;
    gap: 14px;
    flex-wrap: wrap;

    font-size: 0.7rem;
    color: rgba(255, 255, 255, 0.75);
    line-height: 1.7;
}

.footer-bottom p{
    margin: 0;
    max-width: 600px;
    flex: 1;
}



@media (max-width: 1024px) {

 }

@media (max-width: 768px) {
    .hero-text{
        font-size: 1.8rem;
    }

    .menu {
        display: block;
        color: var(--green);
    }

    .nav-links {
        display: none;       
        flex-direction: column;
        position: absolute;
        top: 100%;
        left: 0;
        width: 100%;
        padding: 1rem 6%;
        background: var(--bg);
    }

    .nav-links.active {
        display: flex;         
    }

    .nav-links a {
        position: relative;   
        display: inline-block;
        font-size: 18px;
        color: var(--white);
    }

    #about{
        flex-direction: column;
    }

    .footer-top{
        flex-direction: column;
        align-items: flex-start;
        gap: 40px;
        margin: 40px 20px;
    }

    .footer-bottom{
        flex-direction: column;
        text-align: center;
        padding: 20px 0;
        gap: 12px;
        font-size: 0.85rem;
    }

    .footer-brand p{
        font-size: 20px;
    }

    .footer-bottom{
        flex-direction: column;
        align-items: flex-start;
        margin: 20px;
    }
}

@media (max-width: 480px) { }
  

